# as-aosp

./: .gitignore  README.md  build.gradle  gradle.properties  ln.sh  proguard-rules.pro  settings.gradle
AndroidRuntime/: CMakeLists.txt
AndroidServices/: CMakeLists.txt  build.gradle
CarFramework/: build.gradle
CarServices/: CMakeLists.txt  build.gradle
CarSettings/: build.gradle
Connectivity/: CMakeLists.txt  build.gradle
CtsInputTestCases/: build.gradle
CtsWindowManagerDeviceTestCases/: build.gradle
ExtServices/: CMakeLists.txt  build.gradle
Framework/: build.gradle
FrameworkRes/: build.gradle
InputFlinger/: CMakeLists.txt
NeuralNetworks/: CMakeLists.txt
Permission/: build.gradle
Services/: build.gradle
Settings/: build.gradle
SettingsLib/: build.gradle
SettingsProvider/: build.gradle
SurfaceFlinger/: CMakeLists.txt
SystemUI/: build.gradle
SystemUIPluginLib/: build.gradle
TensorFlow/: CMakeLists.txt  build.gradle
Wifi/: build.gradle
android-runtime/: CMakeLists.txt
android-services/: CMakeLists.txt  build.gradle
aosp-car/CarSystemUI/: build.gradle
aosp-cmake/: CMakeLists.txt  build.gradle  projects.json
aosp-cmake/art/adbconnection/: CMakeLists.txt
aosp-cmake/art/benchmark/: CMakeLists.txt
aosp-cmake/art/compiler/: CMakeLists.txt
aosp-cmake/art/dalvikvm/: CMakeLists.txt
aosp-cmake/art/dex2oat/: CMakeLists.txt
aosp-cmake/art/dexdump/: CMakeLists.txt
aosp-cmake/art/dexlayout/: CMakeLists.txt
aosp-cmake/art/dexlist/: CMakeLists.txt
aosp-cmake/art/dexoptanalyzer/: CMakeLists.txt
aosp-cmake/art/disassembler/: CMakeLists.txt
aosp-cmake/art/dt_fd_forward/: CMakeLists.txt
aosp-cmake/art/imgdiag/: CMakeLists.txt
aosp-cmake/art/libartbase/: CMakeLists.txt
aosp-cmake/art/libartpalette/: CMakeLists.txt
aosp-cmake/art/libarttools/: CMakeLists.txt
aosp-cmake/art/libdexfile/: CMakeLists.txt
aosp-cmake/art/libelffile/: CMakeLists.txt
aosp-cmake/art/libnativebridge/: CMakeLists.txt
aosp-cmake/art/libnativeloader/: CMakeLists.txt
aosp-cmake/libcore/: CMakeLists.txt
aosp-cmake/libnativehelper/: CMakeLists.txt
aosp-cts/CtsDevicePolicyManagerTestCases/: build.gradle
aosp-cts/CtsDevicePolicyTestCases/: build.gradle
aosp-cts/tradefed/: build.gradle
aosp-modules/Connectivity/: build.gradle
aosp-modules/ExtServices/: build.gradle
aosp-modules/FrameworkRes/: build.gradle
aosp-modules/Permission/: build.gradle
aosp-modules/Settings/: build.gradle
aosp-modules/SettingsLib/: build.gradle
aosp-modules/SystemUI/: build.gradle
aosp-modules/SystemUIPluginLib/: build.gradle
aosp-native/: CMakeLists.txt  README.md  build.gradle
aosp-native/ATrace/: CMakeLists.txt
aosp-native/AndroidRuntime/: CMakeLists.txt
aosp-native/AndroidServices/: CMakeLists.txt
aosp-native/AppProcess/: CMakeLists.txt
aosp-native/AudioFlinger/: CMakeLists.txt
aosp-native/AudioPolicy/: CMakeLists.txt
aosp-native/AudioServer/: CMakeLists.txt
aosp-native/AutoMotiveVehicle/: CMakeLists.txt
aosp-native/BootAnimation/: CMakeLists.txt
aosp-native/DumpState/: CMakeLists.txt
aosp-native/DumpSys/: CMakeLists.txt
aosp-native/ExtServices/: CMakeLists.txt
aosp-native/InputFlinger/: CMakeLists.txt
aosp-native/Installd/: CMakeLists.txt
aosp-native/NeuralNetworks/: CMakeLists.txt
aosp-native/SensorService/: CMakeLists.txt
aosp-native/ServiceManager/: CMakeLists.txt
aosp-native/SurfaceFlinger/: CMakeLists.txt
aosp-native/TensorFlow/: CMakeLists.txt
aosp-native/VibratorService/: CMakeLists.txt
aosp-system-server/Framework/: build.gradle
car-framework/: build.gradle
car-services/: CMakeLists.txt  build.gradle
car/CarFramework/: build.gradle
car/CarServices/: build.gradle
ext-framework/: AndroidManifest.xml  build.gradle
ext-iframework/: build.gradle
ext-iservices/: AndroidManifest.xml  build.gradle
ext-services/: AndroidManifest.xml  build.gradle
flyme-framework/: build.gradle
flyme-framework-res/: build.gradle
flyme-launcher/: build.gradle
flyme-services/: build.gradle
flyme/flyme-framework/: build.gradle
flyme/flyme-services/: build.gradle
framework/: CMakeLists.txt  build.gradle
framework-res/: build.gradle
generate-cmake-scripts/: generate-cmake-android-services.sh  generate-cmake-inputflinger.sh  generate-cmake-surfaceflinger.sh  generate-cmake.py
gradle/wrapper/: gradle-wrapper.properties
i-ext-framework/: AndroidManifest.xml  build.gradle
i-ext-services/: build.gradle
inputflinger/: CMakeLists.txt  build.gradle
junit/: build.gradle
keystore/: platform.jks
lineage-framework/: build.gradle
lineage-framework-res/: build.gradle
lineage-preference-lib/: build.gradle
lineage-services/: build.gradle
lineage-settings-provider/: build.gradle
lineage/lineage-framework/: build.gradle
lineage/lineage-preference-lib/: build.gradle
lineage/lineage-services/: build.gradle
miui-framework/: build.gradle
miui-framework-res/: build.gradle
miui-services/: build.gradle
miui/miui-framework-res/: build.gradle
oppo-framework/: build.gradle
oppo-framework-res/: build.gradle
oppo-services/: build.gradle
oppo/oppo-services/: build.gradle
scripts/: android-build.gradle  aosp.gradle  asop-native-build.gradle  car.gradle  config.gradle  configs-lineage.gradle  configs.gradle  core.gradle  cts.gradle  delete-sdk.py  exclude-folder.py  ext.gradle  flyme.gradle  func.gradle  lineage.gradle  miui.gradle  oppo.gradle  settings-aosp-cmake.gradle  settings-aosp-system-server.gradle  settings-aosp.gradle  settings-car.gradle  settings-cts.gradle  settings-flyme.gradle  settings-vivo.gradle  vivo.gradle
scripts/configs/: aosp.gradle  cts.gradle  flyme.gradle  miui.gradle
scripts/settings/: car.gradle  cts.gradle  lineage.gradle  miui.gradle  oppo.gradle
services/: build.gradle
surfaceflinger/: CMakeLists.txt
test/: AndroidManifest.xml  build.gradle
vivo-framework/: build.gradle
vivo-framework-res/: build.gradle
vivo-services/: build.gradle
vivo/vivo-framework-res/: build.gradle
vivo/vivo-services/: build.gradle
(+1567 files in other folders)
